--- a/laese-vejledning.html
+++ b/laese-vejledning.html
@@ -41,73 +41,73 @@
     genlæse en af bøgerne eller følge en anden vej.</p>
 
     
-    <h1><a name="styre-Linux">Jeg vil lære at installere og styre en Linuxmaskine</a></h1>
-    <a href="friheden"><font face="Courier New,Courier">friheden</font></a> 
+    <h1><a name="styre-Linux/bog">Jeg vil lære at installere og styre en Linuxmaskine</a></h1>
+    <a href="friheden/bog"><font face="Courier New,Courier">friheden</font></a> 
     - Installation af Linux.<br>
-     <font face="Courier New,Courier">\---&gt;<a href="unix">unix</a></font>
+     <font face="Courier New,Courier">\---&gt;<a href="unix/bog">unix</a></font>
     - Styring af Linux og de basale dele af UNIX gennemgås.<br>
      <font face=
     "Courier New,Courier">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;\---&gt;<a href=
-    "admin">admin</a></font> - Bogen for dig som skal lave en server for
+    "admin/bog">admin</a></font> - Bogen for dig som skal lave en server for
     netværket.<br>
      <font face=
     "Courier New,Courier">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;\---&gt;<a
-     href="sikkerhed">sikkerhed</a></font> - Med en maskine på Internet
+     href="sikkerhed/bog">sikkerhed</a></font> - Med en maskine på Internet
     bliver du nødt til at vide noget om sikkerhed<br>
      <font face=
     "Courier New,Courier">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;\---&gt;<a
-     href="web">Web</a></font> - Du vil sikkert også gerne have en
+     href="web/bog">Web</a></font> - Du vil sikkert også gerne have en
     webserver.<br>
      <font face=
     "Courier New,Courier">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;\evt&gt;<a
-     href="wm">wm</a></font> - Se hvilken grafisk brugergrænseflade der passer til dig<br>
+     href="wm/bog">wm</a></font> - Se hvilken grafisk brugergrænseflade der passer til dig<br>
      <font face=
     "Courier New,Courier">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;\evt&gt;<a
-     href="sikkerhed">sikkerhed</a></font> - Kan ikke læses for tit hvis du
+     href="sikkerhed/bog">sikkerhed</a></font> - Kan ikke læses for tit hvis du
     har en maskine på nettet!<br>
      <font face=
     "Courier New,Courier">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;\evt&gt;<a
-     href="signatur">signatur</a></font> - vil du kommunikere sikkert så sker dette med digital signatur.<br>
+     href="signatur/bog">signatur</a></font> - vil du kommunikere sikkert så sker dette med digital signatur.<br>
      <font face=
     "Courier New,Courier">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;\evt&gt;<a
-     href="dokumentation">Dokumentation</a></font> - Nu skal du sørge for at
+     href="dokumentation/bog">Dokumentation</a></font> - Nu skal du sørge for at
     alle dine erfaringer ikke går tabt.</p>
     <hr>
 
     <h1><a name="programmere-Linux">Jeg vil bruge min Linuxmaskine til at
     programmere</a></h1>
-    <a href="friheden"><font face="Courier New,Courier">friheden</font></a> 
+    <a href="friheden/bog"><font face="Courier New,Courier">friheden</font></a> 
     - Installation af Linux.<br>
-     <font face="Courier New,Courier">\---&gt;<a href="unix">unix</a></font>
+     <font face="Courier New,Courier">\---&gt;<a href="unix/bog">unix</a></font>
     - Styring af Linux og de basale dele af UNIX gennemgås.<br>
      <font face=
     "Courier New,Courier">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;\---&gt;<a href=
-    "program">program</a></font> - Introduktion til forskellige
+    "program/bog">program</a></font> - Introduktion til forskellige
     programmeringssprog under Linux.<br>
      <font face=
     "Courier New,Courier">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-     \---&gt;<a href="c">c</a></font> - Programmering i C.<br>
+     \---&gt;<a href="c/bog">c</a></font> - Programmering i C.<br>
      <font face=
     "Courier New,Courier">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-    \---&gt;<a href="c">Java</a></font> - Programmering i Java.</p>
+    \---&gt;<a href="c/bog">Java</a></font> - Programmering i Java.</p>
     <hr>
 
     <h1><a name="Linux-bruger">Jeg vil kunne bruge en Linuxmaskine uden alle
     detaljer</a></h1>
 
     <h4>(Hjælp - Chefen siger vi skal køre Linux)</h4>
-    <a href="kontorbruger"><font face=
+    <a href="kontorbruger/bog"><font face=
     "Courier New,Courier">kontorbruger</font></a> 
     - Hjælper dig til at få lavet noget arbejde.<br>
      <font face="Courier New,Courier">\---&gt;<a href=
-    "applikationer">applikationer</a></font> - præsenterer en masse grafiske
+    "applikationer/bog">applikationer</a></font> - præsenterer en masse grafiske
     programmer til Linux<br>
      <font face=
     "Courier New,Courier">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;\evt&gt;<a
-     href="signatur">signatur</a></font> - vil du kommunikere sikkert så sker dette med digital signatur.<br>
+     href="signatur/bog">signatur</a></font> - vil du kommunikere sikkert så sker dette med digital signatur.<br>
      <font face=
     "Courier New,Courier">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;\evt&gt;<a href=
-    "unix">unix</a></font> - Fortsæt derefter i begynder-bogen hvis du vil
+    "unix/bog">unix</a></font> - Fortsæt derefter i begynder-bogen hvis du vil
     vide mere om det tekniske indhold.</p>
     <hr>
 
