--- a/laese-vejledning.html
+++ b/laese-vejledning.html
@@ -70,7 +70,7 @@
      href="signatur/bog">signatur</a></font> - vil du kommunikere sikkert så sker dette med digital signatur.<br>
      <font face=
     "Courier New,Courier">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;\evt&gt;<a
-     href="dokumentation/bog">Dokumentation</a></font> - Nu skal du sørge for at
+     href="dokumentation/bog">dokumentation</a></font> - Nu skal du sørge for at
     alle dine erfaringer ikke går tabt.</p>
     <hr>
 
@@ -110,10 +110,7 @@
     "unix/bog">unix</a></font> - Fortsæt derefter i begynder-bogen hvis du vil
     vide mere om det tekniske indhold.</p>
     <hr>
-
-    <p><a href="/">tilbage til oversigten</a></p>
     <!-- Text slut -->
-    <!--#include virtual="/includes/bottom.html" -->
   </body>
 </html>
 
