--- a/hjaelpe.html
+++ b/hjaelpe.html
@@ -47,7 +47,7 @@
     "http://www.linuxbog.dk/dokumentation/bog/">http://www.linuxbog.dk/dokumentation/bog/</a>.</p>
      
     <p>Vi har forslag til 
-    <a href="http://cvs.linuxbog.dk/?t=TODO">hvad der skal laves</a>.</li>
+    <a href="http://cvs.linuxbog.dk/?t=TODO">hvad der skal laves</a>.
 
     <p>Har du fundet noget som skal laves om, så er det følgende det bedste
     du kan gøre:</p>
