--- a/laese-vejledning.html
+++ b/laese-vejledning.html
@@ -70,7 +70,7 @@
      <font face=
     "Courier New,Courier">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;\evt&gt;<a
      href="dokumentation/bog">dokumentation</a></font> - Nu skal du sørge for at
-    alle dine erfaringer ikke går tabt.</p>
+    alle dine erfaringer ikke går tabt.
     <hr>
 
     <h1><a name="programmere-Linux">Jeg vil bruge min Linuxmaskine til at
@@ -88,7 +88,7 @@
      \---&gt;<a href="c/bog">c</a></font> - Programmering i C.<br>
      <font face=
     "Courier New,Courier">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-    \---&gt;<a href="c/bog">Java</a></font> - Programmering i Java.</p>
+    \---&gt;<a href="c/bog">Java</a></font> - Programmering i Java.
     <hr>
 
     <h1><a name="Linux-bruger">Jeg vil kunne bruge en Linuxmaskine uden alle
@@ -107,7 +107,7 @@
      <font face=
     "Courier New,Courier">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;\evt&gt;<a href=
     "unix/bog">unix</a></font> - Fortsæt derefter i begynder-bogen hvis du vil
-    vide mere om det tekniske indhold.</p>
+    vide mere om det tekniske indhold.
     <hr>
     <!-- Text slut -->
   </body>
