--- a/licens.html
+++ b/licens.html
@@ -8,7 +8,7 @@
 <BODY>
 <!-- Text start -->
 
-<p align=center><img src="licens/licens.png"></p>
+<p align=center><img src="licens/licens.png" alt="Licens"></p>
 
 <H1 align="center">Åben dokumentlicens (ÅDL)</h1>
 
