Ny udgave af glame kommet

--- a/applikationer/todo.html
+++ b/applikationer/todo.html
@@ -109,6 +109,9 @@ exec /usr/bin/aspell --lang=${ordbog:-dansk} check $@
   grafikmanipulatorer skal skrives om. Skal det hedder
   grafikmanipulatorer?</li>
 
+  <li>Glame er udkommet i en ny version 1.0.0 d. 19. april 2003, nu med
+      danske tekster. Check det ud, opdater.</li>
+
   <li>Ardour, hjemmeside: http://ardour.sourceforge.net/</li>
 
   <li>Baudline, hjemmeside: http://www.baudline.com</li>
