Tilføjet afsnit (ufærdigt) om installation af programmer til indledning, inklusiv billede. Flyttet rundt på nogen kapitler, og en masse afsnit, opdateret indledning. Tilføjet en del stikord. Opdateret todo liste.

--- a/applikationer/todo.html
+++ b/applikationer/todo.html
@@ -37,34 +37,6 @@
 
 </ul></li>
 
-<!-- ---------------------------- -->
-<li>Introduktion til grafisk grænseflader<ul>
-
-  <li>Der mangler screenshots af hvordan KDM og GDM ser ud til
-  indledningen.</li>
-
-  <li>Enkelte af beskrivelserne af window managers forklarer klodset
-  hvad en window manager er.</li>
-
-  <li>Gnome - Både RH8 og MDK9 har vist gnome 2, så mon ikke det er på
-  tide at rykke til dem? Eller hvad? Fjerne referencer til
-  f.eks. redhat 6.</li>
-
-  <li>KDE - det er ikke specielt professionelt at have
-  træk-og-slip... Finten om QT er irelevant. Mere om KDE3?</li>
-
-  <li>KDE og Gnome - det ville være lækkert at synche indholdet
-  lidt. Gnome delen snakker om CD afspilning og PIM'er, KDE har et
-  eksempel på at installere et link til Emacs og snakker en del om
-  KOffice og har den der private webserver. Hører det hjemme i den
-  præsentation? Jeg synes det ikke rigtigt.</li>
-
-  <li>WindowMaker - kan det ikke bare vælges fra et *DM session
-  login</li>
- 
-  <li>Skal der være et avanceret afsnit om hvordan X starter op?</li>
-
-</ul></li>
 
 <!-- ---------------------------- -->
 <li>Kontorprogrammer<ul>
@@ -72,7 +44,11 @@
   <li>Skriv noget om egnede programmer til at skrive hjemmesider i.
   IBM har noget kommercielt, og ellers er der <a
   href="http://quanta.sourceforge.net/">Quanta</a>, <a
-  href="http://ftp.europeanservers.net/bluefish/downloads/?N=D">Bluefish</a></li>
+  href="http://ftp.europeanservers.net/bluefish/downloads/?N=D">Bluefish</a>
+
+  Der skal være et screenshot af noget der ikke har HTML koder, men er
+  mere WYSIWYG.
+</li>
 
   <li>et godt program til at læse post via en webserver !!! -) Måske
   nwebmail ? http://nwebmail.sourceforge.net/ eller IMP
@@ -94,6 +70,8 @@ exec /usr/bin/aspell --lang=${ordbog:-dansk} check $@
 
   <li>Skriv om <a href="http://www.gnomemeeting.org">Gnomemeeting</a> -
   konkurrent til MS Netmeeting - nb, kontorprogram???</li>
+
+  <li>DTP: Scribus opdatering</li>
 
 </ul></li>
 
@@ -129,6 +107,9 @@ exec /usr/bin/aspell --lang=${ordbog:-dansk} check $@
   <li>K-3D, hjemmeside: http://www.k-3d.com/</li>
   <li>Maya, hjemmeside:
   http://www.aliaswavefront.com/en/Home/homepage.html</li>
+
+  <li>Skriv om qcad - minitutorial.</li>
+
 </ul></li>
 
 <!-- ---------------------------- -->
@@ -157,17 +138,15 @@ exec /usr/bin/aspell --lang=${ordbog:-dansk} check $@
 <!-- ---------------------------- -->
 <li>Andre Applikationer<ul>
 
-  <li>Kapitlet om applikationer (kapitel 2) starter med et afsnit om
+  <li>Kapitlet om forskellige applikationer starter med et afsnit om
   programmeringsværktøjer. Ok, da. Det skal laves om. De programmer
   man må antage "almindelige mennesker" vil ønske at bruge mest skal
   placeres først. Strukturen skal laves enog meget om. Dette kapitel
   skal måske helt stryges, eller omskrives til en kort introduktion
   til hvilke software grupper der findes og vi anvender fremover. Et
-  eksempel: "3D-modellering" er under kapitel 2 - og, kapitel 6 hedder
-  "lyd og billede". Hurra. :-) Umiddelbart ser det ud til at kapitel 6
-  med fordel kunne flyttes op over det nuværende kapitel 4
-  (emulatorer).<br>
-</li>
+  eksempel: "3D-modellering" er under dette - og, vi har et kapitel
+  der hedder "lyd og billede". Hurra. :-)
+  </li>
 
 </ul></li>
 
@@ -177,8 +156,8 @@ exec /usr/bin/aspell --lang=${ordbog:-dansk} check $@
 
 <!-- Text slut -->
 <!-- Husk din email-adresse: -->
-<center><p>Denne side vedligeholdes af Peter Toft 
-(&lt;<A HREF="mailto:pto@sslug.dk">pto@sslug.dk</a>&gt;)</p>
+<center><p>Denne side vedligeholdes af Mads Bondo Dydensborg 
+(&lt;<A HREF="mailto:madsdyd@challenge.dk">madsdyd@challenge.dk</a>&gt;)</p>
 </center>
 </BODY>
 </HTML>
