--- a/applikationer/todo.html
+++ b/applikationer/todo.html
@@ -96,6 +96,11 @@ exec /usr/bin/aspell --lang=${ordbog:-dansk} check $@
 
   <li>cSound, hjemmeside: http://www.csound.org/</li>
 
+  <li>Check <a
+href="http://slashdot.org/articles/03/08/24/1628239.shtml?tid=106&tid=141&tid=185&tid=188">
+http://slashdot.org/articles/03/08/24/1628239.shtml?tid=106&tid=141&tid=185&tid=188</a>
+for en god artikel om lydting, check dem ud.</li>
+
 </ul></li>
 
 <!-- ---------------------------- -->
