Tilføjet en skrivevejledningsfil - opdateret todo.html.

--- a/applikationer/todo.html
+++ b/applikationer/todo.html
@@ -3,16 +3,22 @@
 <HTML>
 <HEAD>
 <!-- Husk titel. Skal begynde med "SSLUG - " -->
-   <TITLE>SSLUG - Hvordan man hjælper med at forbedre linuxbog-bøgerne</TITLE>
+   <TITLE>SSLUG - TODO liste for applikationsbogen</TITLE>
 <LINK REL="STYLESHEET" HREF="/style/sslug.css" TYPE="text/css">
 </HEAD>
 <BODY>
 <!-- Text start -->
 
-<H1 align="center">Hvad ser vi gerne skrevet i denne bog?</h1>
+<H1 align="center">Hvad ser vi gerne skrevet om i denne bog?</h1>
 
 
-<h2>Liste over ting du meget gerne må skrive om</h2>
+<p>Denne side indeholder en slags noter i punktform om hvilke dele af
+bogen der trænger til opdatering, programmer vi gerne vil have omtalt,
+mv, mv. Hvis du har et ønske om et program der skal omtales, eller
+viden om et af dem vi efterlyser omtalt, må du meget gerne kontakte os
+for at få skrevet det nødvendige. Hvis du vil vide lidt om hvordan vi
+gerne ser ting skrevet i bogen, så kig på vores <a
+href="skrivevejledning.html">skrivevejledning</a>.</p>
 
 <ul>
 
@@ -20,7 +26,12 @@
 <!-- ---------------------------- -->
 <li>Generelt<ul>
 
+  <li>jeg ændres til vi alle steder</li>
+
   <li>Bedre indledning til bogen</li>
+  <li>Nogen indledende forklaringer af at vi medtager både X og
+  konsolprogrammer, samt i enkelte tilfælde serverbaserede programmer</li>
+
   <li>Der mangler stadig mange ordforklaringer</li>
   <li>Det ville være godt med markering i SGML-filerne af flere
   stikord. Kontakt Peter Toft pto@sslug.dk hvis du vil hjælpe med dette</li>
@@ -34,6 +45,8 @@
   <li>Der skal være et afsnit om installation og
   distributionsspecifikke "ekstra" kilder, ala plf til Mandrake. Husk
   at opdatere indledning.sgml</li>
+
+  <li>Alt om Corel skal gennemgåes.</li>
 
 </ul></li>
 
@@ -71,8 +84,10 @@ exec /usr/bin/aspell --lang=${ordbog:-dansk} check $@
   <li>Skriv om <a href="http://www.gnomemeeting.org">Gnomemeeting</a> -
   konkurrent til MS Netmeeting - nb, kontorprogram???</li>
 
-  <li>DTP: Scribus opdatering</li>
+  <li>DTP: Scribus opdatering, hvad med FrameMaker?</li>
 
+  <li>OCR: Kan det virkeligt passe det der står i dette afsnit?</li>
+  
 </ul></li>
 
 <!-- ---------------------------- -->
@@ -115,6 +130,8 @@ for en god artikel om lydting, check dem ud.</li>
 
   <li>Skriv om qcad - minitutorial.</li>
 
+  <li>Digital kamera programmer: Ihvertfald Gallery (online), imgseek?</li>
+
 </ul></li>
 
 <!-- ---------------------------- -->
@@ -153,6 +170,9 @@ for en god artikel om lydting, check dem ud.</li>
   der hedder "lyd og billede". Hurra. :-)
   </li>
 
+  <li>CD rom brænding; gcombust + nogen andre end XCDRoast (jordens
+  grimmeste program).</li>
+  
 </ul></li>
 
 
