Flyttet rundt på afsnittene om digitale billeder og delt tingene lidt anderledes op. Skrevet et afsnit om xli (billedviser). Skrevet lidt om typografi for tastetryk og manualsidereferencer og skrevet et afsnit om qiv (billedviser). Tilføjet et afsnit om GQview (billedbrowser).

--- a/applikationer/todo.html
+++ b/applikationer/todo.html
@@ -26,7 +26,7 @@ href="skrivevejledning.html">skrivevejledning</a>.</p>
 <!-- ---------------------------- -->
 <li>Generelt<ul>
 
-  <li>jeg ændres til vi alle steder</li>
+  <li>Jeg ændres til vi alle steder</li>
 
   <li>Bedre indledning til bogen</li>
   <li>Nogen indledende forklaringer af at vi medtager både X og
@@ -91,6 +91,44 @@ exec /usr/bin/aspell --lang=${ordbog:-dansk} check $@
 </ul></li>
 
 <!-- ---------------------------- -->
+<li>Grafik/digitale billeder.<ul>
+
+<li>Billedvisningsprogrammer; skriv om preview i filbrowsere,
+pixie. Jeg synes ikke flphoto er specielt simpelt. Det har da album
+support, mv.</li>
+
+<li>Programmer at checke ud: 
+<ul>
+<li>Viewers: xzgv, zgv, _gthumb_, iv, lats</li>
+<li>bins: The aim of BINS is to generate static HTML photo albums</li>
+<li>Programmer til at omdøbe billeder; krename, digicamerge (Digital
+camera filename manager)</li>
+<li>Exif: gexif, _jhead_</li>
+<li>Hvis man har digitalkamera, ikke supportet af gphoto2; photopc???.</li>
+</ul>
+</li>
+
+  <li>xpcd er et program til at håndtere PhotoCD'er med. Nogen der bruger
+dem?</li>
+
+  <li>Kan det passe at vi <b>ingen steder</b> i bøgerne har noget om sane
+eller scanning under Linux? Vi har jo noget om OCR... i kontor
+afsnittet. Der er også et program der hedder "Clara OCR". Noget vi
+kender? Der er en frontend til gocr, gocr-gtk.</li>
+
+  <li>Blender?, http://www.blender.nl/</li>
+  <li>EndeavourII?</li>
+  <li>K-3D, hjemmeside: http://www.k-3d.com/</li>
+  <li>Maya, hjemmeside:
+  http://www.aliaswavefront.com/en/Home/homepage.html</li>
+
+  <li>Skriv om qcad - minitutorial.</li>
+
+  <li>Digital kamera programmer: Ihvertfald Gallery (online), imgseek?</li>
+
+</ul></li>
+
+<!-- ---------------------------- -->
 <li>Lyd<ul>
 
   <li>Lyd og bilede. Vi skal have præsenteret de mest generelle
@@ -101,6 +139,9 @@ exec /usr/bin/aspell --lang=${ordbog:-dansk} check $@
   til at starte med. Indledningen til afsnittet om tegneprogrammer og
   grafikmanipulatorer skal skrives om. Skal det hedder
   grafikmanipulatorer?</li>
+
+  <li>Alle er ved at gå amok over Jack Audio Connection Kit (JACK) -
+  det må vi hellere lige checke op på.</li>
 
   <li>Glame er udkommet i en ny version 1.0.0 d. 19. april 2003, nu med
       danske tekster. Check det ud, opdater.</li>
@@ -118,21 +159,6 @@ for en god artikel om lydting, check dem ud.</li>
 
 </ul></li>
 
-<!-- ---------------------------- -->
-<li>Grafik<ul>
-  <li>Blender?, http://www.blender.nl/</li>
-  <li>Compupic? Kommercielt (gratis til ikke kommercielt brug),
-  sjældent opdateret, men godt.</li>
-  <li>EndeavourII?</li>
-  <li>K-3D, hjemmeside: http://www.k-3d.com/</li>
-  <li>Maya, hjemmeside:
-  http://www.aliaswavefront.com/en/Home/homepage.html</li>
-
-  <li>Skriv om qcad - minitutorial.</li>
-
-  <li>Digital kamera programmer: Ihvertfald Gallery (online), imgseek?</li>
-
-</ul></li>
 
 <!-- ---------------------------- -->
 <li>Av<ul>
