Skrevet en del i GPhoto2 afsnittet, om USB og ramkort. Ramkort mangler stadig! Et par detaljer og programmer tilføjet i todo og skrivevejledning.

--- a/applikationer/skrivevejledning.html
+++ b/applikationer/skrivevejledning.html
@@ -34,7 +34,8 @@ programmer, men hvis der mangler en "programtype", så start med at
 skrive om den første slags.</p>
 
 <p>Vi ser gerne bogen skrevet i "vi" form &ndash; ordet "jeg" er
-bandlyst.</p>
+bandlyst. Til gengæld skriver vi til vores læser som "du" &ndash; og
+forsøger at undgå brugen af ordet "man".</p>
 
 <p>Mads har en personlig kæphest i tankestreger. En tankestreg ser
 sådan her ud &ndash; og kan ikke skrives på nogen anden måde. Det er et
