--- a/applikationer/todo.html
+++ b/applikationer/todo.html
@@ -26,7 +26,8 @@ href="skrivevejledning.html">skrivevejledning</a>.</p>
 <!-- ---------------------------- -->
 <li>Generelt<ul>
 
-  <li>Jeg ændres til vi alle steder</li>
+  <li>Jeg ændres til vi alle steder, man til du (det sidste er ret
+  krævende) hvor det giver mening.</li>
 
   <li>Bedre indledning til bogen</li>
   <li>Nogen indledende forklaringer af at vi medtager både X og
@@ -93,6 +94,9 @@ exec /usr/bin/aspell --lang=${ordbog:-dansk} check $@
 <!-- ---------------------------- -->
 <li>Grafik/digitale billeder.<ul>
 
+<li>USB rettigheder under gphoto2:
+http://www.gphoto.org/doc/manual/permissions-usb.html</il>
+
 <li>Billedvisningsprogrammer; skriv om preview i filbrowsere,
 pixie. Jeg synes ikke flphoto er specielt simpelt. Det har da album
 support, mv.</li>
@@ -105,6 +109,9 @@ support, mv.</li>
 camera filename manager)</li>
 <li>Exif: gexif, _jhead_</li>
 <li>Hvis man har digitalkamera, ikke supportet af gphoto2; photopc???.</li>
+<li>Stitching: PanoTools (frontend Hugin), pnmstitch, phfluuh</li>
+<li>red eye: http://www.linuxjournal.com/article.php?sid=6567, flphoto
+har en touch up knap?</li>
 </ul>
 </li>
 
@@ -118,13 +125,15 @@ kender? Der er en frontend til gocr, gocr-gtk.</li>
 
   <li>Blender?, http://www.blender.nl/</li>
   <li>EndeavourII?</li>
-  <li>K-3D, hjemmeside: http://www.k-3d.com/</li>
+  <li>K-3D, hjemmeside: http://www.k-3d.com/, wings3d, openfx?</li>
   <li>Maya, hjemmeside:
   http://www.aliaswavefront.com/en/Home/homepage.html</li>
 
   <li>Skriv om qcad - minitutorial.</li>
 
   <li>Digital kamera programmer: Ihvertfald Gallery (online), imgseek?</li>
+
+  <li>Hvordan skriver man bedst billeder ud?</li>
 
 </ul></li>
 
@@ -139,6 +148,9 @@ kender? Der er en frontend til gocr, gocr-gtk.</li>
   til at starte med. Indledningen til afsnittet om tegneprogrammer og
   grafikmanipulatorer skal skrives om. Skal det hedder
   grafikmanipulatorer?</li>
+
+  <li>Kig på afsnittet om mplayer, at det ikke er bundet til en bestemt
+version.</li>
 
   <li>Alle er ved at gå amok over Jack Audio Connection Kit (JACK) -
   det må vi hellere lige checke op på.</li>
