Nyt afsnit om mplayer (det gamle røget ud) af Mads Sabroe.

--- a/applikationer/todo.html
+++ b/applikationer/todo.html
@@ -174,7 +174,11 @@ for en god artikel om lydting, check dem ud.</li>
 
 <!-- ---------------------------- -->
 <li>Av<ul>
-  <li>Shake, Hjemmeside: http://www.nothingreal.com/</li>
+  <li>Afsnittet om Video og DVD skal omskrives, så vi tager udgangspunkt i
+afspillerne -- der er for meget forvirring ved at tage udgangspunkt i
+codecs.</li>
+
+<li>Shake, Hjemmeside: http://www.nothingreal.com/</li>
 </ul></li>
 
 <!-- ---------------------------- -->
