Tilføjet et afsnit om gThumb (billedbrowser).

--- a/applikationer/todo.html
+++ b/applikationer/todo.html
@@ -94,16 +94,13 @@ exec /usr/bin/aspell --lang=${ordbog:-dansk} check $@
 <!-- ---------------------------- -->
 <li>Grafik/digitale billeder.<ul>
 
-<li>USB rettigheder under gphoto2:
-http://www.gphoto.org/doc/manual/permissions-usb.html</il>
-
 <li>Billedvisningsprogrammer; skriv om preview i filbrowsere,
 pixie. Jeg synes ikke flphoto er specielt simpelt. Det har da album
 support, mv.</li>
 
 <li>Programmer at checke ud: 
 <ul>
-<li>Viewers: xzgv, zgv, _gthumb_, iv, lats</li>
+<li>Viewers: xzgv, zgv, iv, lats</li>
 <li>bins: The aim of BINS is to generate static HTML photo albums</li>
 <li>Programmer til at omdøbe billeder; krename, digicamerge (Digital
 camera filename manager)</li>
