Tilføjet et afsnit om Exif data og et om programmet jhead (som kan manipulere exif data).

--- a/applikationer/todo.html
+++ b/applikationer/todo.html
@@ -104,7 +104,7 @@ support, mv.</li>
 <li>bins: The aim of BINS is to generate static HTML photo albums</li>
 <li>Programmer til at omdøbe billeder; krename, digicamerge (Digital
 camera filename manager)</li>
-<li>Exif: gexif, _jhead_</li>
+<li>Exif: gexif</li>
 <li>Hvis man har digitalkamera, ikke supportet af gphoto2; photopc???.</li>
 <li>Stitching: PanoTools (frontend Hugin), pnmstitch, phfluuh</li>
 <li>red eye: http://www.linuxjournal.com/article.php?sid=6567, flphoto
