--- a/applikationer/skrivevejledning.html
+++ b/applikationer/skrivevejledning.html
@@ -58,6 +58,13 @@ afslutning.</p>
 
 <h2>Når du skriver om programmer</h2>
 
+<p>Det kan være meget forvirrende hvordan man skal skrive et
+programnavn. Hvis programmets forfattere bruger en speciel
+kapitulering, anvendes den, f.eks. gThumb og GQview. Hvis ikke,
+anvendes stort begyndelsesbogstav, f.eks. jhead -> Jhead. Når man
+skriver om selve en kommandos navn, skrives den som den gøres på
+systemet i command tags: &lt;command&gt;gthumb&lt;/command&gt;.</p>
+
 <p>Når du skriver om programmet, så kan du bruge nedenstående
 spørgsmål som inspiration &ndash; forsøg at give et svar på så mange
 af dem som du kan og finder relevant (i
