Tilføjet et afsnit om programmet exif og gExif. Tilføjet lidt om navngivning af gnome programmer til skrivevejledning.html.

--- a/applikationer/skrivevejledning.html
+++ b/applikationer/skrivevejledning.html
@@ -61,9 +61,13 @@ afslutning.</p>
 <p>Det kan være meget forvirrende hvordan man skal skrive et
 programnavn. Hvis programmets forfattere bruger en speciel
 kapitulering, anvendes den, f.eks. gThumb og GQview. Hvis ikke,
-anvendes stort begyndelsesbogstav, f.eks. jhead -> Jhead. Når man
-skriver om selve en kommandos navn, skrives den som den gøres på
-systemet i command tags: &lt;command&gt;gthumb&lt;/command&gt;.</p>
+anvendes stort begyndelsesbogstav, f.eks. jhead -> Jhead. Undtaget
+herfra er programmer der bruger gtk, eller er til Gnome, der begynder
+med g og har et efterfølgende logisk navn. gthumb -> gThumb, gexif ->
+gExif. Når man skriver om selve en kommandos navn, skrives den som den
+gøres på systemet i command tags:
+&lt;command&gt;gthumb&lt;/command&gt;. (Kommentarer til navngivningen
+er meget velkomne...)</p>
 
 <p>Når du skriver om programmet, så kan du bruge nedenstående
 spørgsmål som inspiration &ndash; forsøg at give et svar på så mange
