Tilføjet afsnit om panorama billeder og en slags minitutorial om PanoTools.

--- a/applikationer/todo.html
+++ b/applikationer/todo.html
@@ -29,6 +29,8 @@ href="skrivevejledning.html">skrivevejledning</a>.</p>
   <li>Jeg ændres til vi alle steder, man til du (det sidste er ret
   krævende) hvor det giver mening.</li>
 
+  <li>Skal billeder centreres???</li>
+
   <li>Bedre indledning til bogen</li>
   <li>Nogen indledende forklaringer af at vi medtager både X og
   konsolprogrammer, samt i enkelte tilfælde serverbaserede programmer</li>
@@ -105,7 +107,7 @@ support, mv.</li>
 <li>Programmer til at omdøbe billeder; krename, digicamerge (Digital
 camera filename manager)</li>
 <li>Hvis man har digitalkamera, ikke supportet af gphoto2; photopc???.</li>
-<li>Stitching: PanoTools (frontend Hugin), pnmstitch, phfluuh</li>
+<li>Stitching: frontend til panotools: Hugin, pnmstitch, phfluuh</li>
 <li>red eye: http://www.linuxjournal.com/article.php?sid=6567, flphoto
 har en touch up knap?</li>
 </ul>
