Smidt ting ind i todo-listen

--- a/wm/todo.html
+++ b/wm/todo.html
@@ -18,9 +18,37 @@
 
     <h2>Liste over ting du meget gerne må skrive om</h2>
 
-    <ul>
-    <li>xpde</li>
-    </ul>
+    <dl>
+      <dt>Sessionsstyring</dt>
+
+      <dd><tt>xsm</tt> og de værktøjer Gnome og KDE
+      genopfinder til session management</dd>
+
+      <dt>Grundlæggende X11-features</dt>
+
+      <dd>Hvad er indbygget i X11 (cut'n'paste, og hvad mere) og i
+      hvilket omfange genopfinder Gnome og KDE det på
+      ukompatible måder</dd>
+
+      <dt>Motif-keybindings</dt>
+
+      <dd>Alt-Tab, Alt-F4 og sikekrt nogle flere er godt som
+      standard. Skriv om det samlet.</dd>
+
+      <dt>Display managers</dt>
+
+      <dd>xdm, gdm, kdm, wdm, ...</dd>
+
+      <dt>Flere wm,er og desktopenvironments</dt>
+
+      <dd>
+        <ul>
+          <li>xpde</li>
+
+          <li>xfce</li>
+        </ul>
+      </dd>
+    </dl>
     <!-- Text slut -->
     <!-- Husk din email-adresse: -->
 
