Tilføjet et afsnit om Hugin (PT frontend).

--- a/applikationer/skrivevejledning.html
+++ b/applikationer/skrivevejledning.html
@@ -47,6 +47,16 @@ fulde form: "Microsoft Windows" hvis Windows skal omtales. Skriv
 gerne noget ala "I modsætning til andre operativsystemer, som
 f.eks. Microsoft Windows, eller Macintosh OS X" osv.</p>
 
+<p>Henvisninger til URL'er skrives i ulink tagget. For den tekst der
+står i bogen (altså imellem ulink åben og ulink luk) skrives ikke
+http://, men ellers skrives linket. Der afsluttes ikke med / hvis det
+sidste ikke er en fil. For selve url'en skrives http:// og der
+afsluttes med / hvis ikke der linkes til en fil. Eksempler (i html) <a
+href="http://www.linuxbog.dk/">www.linuxbog.dk</a> og <a
+href="http://www.linuxbog.dk/index.html">www.linuxbog/index.html</a>.
+Man kan også vælge at skrive nogen andet end et link, hvis man synes
+det er mere passende.... (input ønskes).</p>
+
 <h2>Skrivning om "emner"</h2>
 
 <p>Nogen gange vil det du skriver, være et nyt selvstændigt "emne",
