--- a/applikationer/todo.html
+++ b/applikationer/todo.html
@@ -107,9 +107,12 @@ support, mv.</li>
 <li>Programmer til at omdøbe billeder; krename, digicamerge (Digital
 camera filename manager)</li>
 <li>Hvis man har digitalkamera, ikke supportet af gphoto2; photopc???.</li>
-<li>Stitching: frontend til panotools: Hugin, pnmstitch, phfluuh</li>
+<li>Stitching: frontend til panotools: pnmstitch, phfluuh</li>
 <li>red eye: http://www.linuxjournal.com/article.php?sid=6567, flphoto
-har en touch up knap?</li>
+har en touch up knap? Bedre, måske:
+http://cs.uhh.hawaii.edu/~jeschke/photography/articles/gimp/tutorials.shtml
+- der er mange ting om gimp her, inklusiv checkede måder at fjerne redeye
+på...</li>
 </ul>
 </li>
 
