Tilføjet et afsnit om at fjerne redeye med gimp (og plugins)

--- a/applikationer/todo.html
+++ b/applikationer/todo.html
@@ -51,6 +51,8 @@ href="skrivevejledning.html">skrivevejledning</a>.</p>
 
   <li>Alt om Corel skal gennemgåes.</li>
 
+  <li>Har vi stadig noget om browsere? Så MozillaFirebird... </li>
+
 </ul></li>
 
 
@@ -108,11 +110,7 @@ support, mv.</li>
 camera filename manager)</li>
 <li>Hvis man har digitalkamera, ikke supportet af gphoto2; photopc???.</li>
 <li>Stitching: frontend til panotools: pnmstitch, phfluuh</li>
-<li>red eye: http://www.linuxjournal.com/article.php?sid=6567, flphoto
-har en touch up knap? Bedre, måske:
-http://cs.uhh.hawaii.edu/~jeschke/photography/articles/gimp/tutorials.shtml
-- der er mange ting om gimp her, inklusiv checkede måder at fjerne redeye
-på...</li>
+<li>red eye: flphoto har en touch up knap?</li>
 </ul>
 </li>
 
