Færdiggjort et minimalt afsnit om Gallery (publicering på nettet af billeder).

--- a/applikationer/todo.html
+++ b/applikationer/todo.html
@@ -129,9 +129,9 @@ kender? Der er en frontend til gocr, gocr-gtk.</li>
 
   <li>Skriv om qcad - minitutorial.</li>
 
-  <li>Digital kamera programmer: Ihvertfald Gallery (online), imgseek?</li>
+  <li>Digital kamera programmer: Ihvertfald imgseek?</li>
 
-  <li>Hvordan skriver man bedst billeder ud?</li>
+  <li>Hvordan skriver man bedst billeder ud? Fremkaldelse via Føtex...</li>
 
 </ul></li>
 
@@ -203,6 +203,8 @@ codecs.</li>
   <li>CD rom brænding; gcombust + nogen andre end XCDRoast (jordens
   grimmeste program).</li>
   
+  <li>quickplot på sourceforge er god til at studere/visualisere/zoome 2D data med.</li>
+
 </ul></li>
 
 
