Fikset (håber jeg) billedestørrelser i afsnittet om gnumeric, opdateret lidt.

--- a/applikationer/todo.html
+++ b/applikationer/todo.html
@@ -83,8 +83,7 @@ exec /usr/bin/aspell --lang=${ordbog:-dansk} check $@
   </pre>
   </li>
 
-  <li>Alt om staroffice og openoffice skal gennemgås. Nye officesuiter
-  skal tilføjes. (koffice, andre?)</li>
+  <li>Nye officesuiter skal tilføjes. (koffice, andre?)</li>
 
   <li>Skriv om <a href="http://www.gnomemeeting.org">Gnomemeeting</a> -
   konkurrent til MS Netmeeting - nb, kontorprogram???</li>
@@ -93,6 +92,8 @@ exec /usr/bin/aspell --lang=${ordbog:-dansk} check $@
 
   <li>OCR: Kan det virkeligt passe det der står i dette afsnit?</li>
   
+  <li>Afsnittet om gnumeric -- opdateres, reducere antallet af figurer.</li>
+
 </ul></li>
 
 <!-- ---------------------------- -->
