Rettet lidt i afsnittene om LaTeX og LyX.

--- a/applikationer/todo.html
+++ b/applikationer/todo.html
@@ -53,6 +53,9 @@ href="skrivevejledning.html">skrivevejledning</a>.</p>
 
   <li>Har vi stadig noget om browsere? Så MozillaFirebird... </li>
 
+  <li>Der er nogle skærmskud der har "støj" i kanterne,
+  f.eks. skærmskud af Lyx.</li>
+
 </ul></li>
 
 
