Rettet billedestørrelser og tilføjet captions for Gtkam og Digikam

--- a/applikationer/todo.html
+++ b/applikationer/todo.html
@@ -137,6 +137,8 @@ kender? Der er en frontend til gocr, gocr-gtk.</li>
 
   <li>Hvordan skriver man bedst billeder ud? Fremkaldelse via Føtex...</li>
 
+  <li>Gimp billedeeksemepler samles i enkelt billede.</li>
+
 </ul></li>
 
 <!-- ---------------------------- -->
