todo.html, redaktionel linie m.v. fra møde 14/10, anede ikke, at man kunne skrive noget i todo.html! Hvem er Kim Schulz?

--- a/c/todo.html
+++ b/c/todo.html
@@ -17,12 +17,31 @@
     <h1 align="center">Hvad ser vi gerne skrevet i denne bog?</h1>
 
     <h2>Liste over ting du meget gerne må skrive om</h2>
-
+    <ul>
+       <li> ISO standardens forbedringer i forhold til ANSI C (Appendix C)</li>
+       <li> Systemprogrammering, et afsnit for begyndere om filhåndtering, det skal være et nyt kapitel 4.</li>
+       <li> ISO library standard. (Fortsættelse af ovst.)</li>
+       <li> Posix. (Fortsættelse af ovst.)</li>
+       <li> Unix library konventioner. Nyt kapitel 5.</li>
+       <li> Netværksprogrammering, select og sockets, nyt kap. 6.</li>
+       <li> Parser og tilstandsmaskiner flytter til kap. 7.</li>
+    </ul>
+    <p>
+    Afsnittene skal være forholdsvis korte, og der skal helst
+    være korte eksempler, som kan stå i bogen. Jeg må indrømme,
+    at jeg dog har en vis forkærlighed for small-C og at den
+    overordnede del får lov at stå i kapitlet, men det kan også
+    være, at vi piller den ud på et tidspunkt og laver henvisning
+    til en anden bog (ikke nødvendigvis Linuxbog). Tag-parseren
+    er trods alt parsnings-eksempel nok.
+    </p>
     <ul>
       <li>Kontakt linuxbog@sslug.dk</li>
 
       <li>Kritisk gennemgang af det der skrives (kontakt: Kim Schulz 
       &lt;kim@sslug.dk&gt;)</li>
+      <li>Bidrag, forslag og redaktionel linie: kontakt Donald
+      Axel &lt;donald_j_axel@get2net.dk&gt;
     </ul>
     <!-- Text slut -->
     <!-- Husk din email-adresse: -->
