--- a/licens/vaerker.html
+++ b/licens/vaerker.html
@@ -18,6 +18,14 @@
 <ul>
 <li><a href="http://javabog.dk">Objektorienteret programmering i Java</a> af 
 Jacob Nordfalk</li>
+
+<li><a href="http://javabog.dk/VP/">Videregående programmering i Java</a> af 
+Jacob Nordfalk</li>
+
+<li><a href="http://javabog.dk/JSP/">Webprogrammering med JSP - Java Server 
+Pages</a> af Jacob Nordfalk
+(titel er endnu ikke helt afgjort)</li>
+
 <li>
 <a href="http://debianguiden.dk/">Debianguiden</a> er en bog om Debian</li>
 <li>Frit Firewall-kursus <a href="http://www.chbs.dk/kurser/firewall">http://www.chbs.dk/kurser/firewall</a></li>
