--- a/licens/vaerker.html
+++ b/licens/vaerker.html
@@ -26,6 +26,11 @@ Jacob Nordfalk</li>
 Pages</a> af Jacob Nordfalk
 (titel er endnu ikke helt afgjort)</li>
 
+<li><a href="http://leif.rasserne.dk/local/foredrag/">Open Source i et oplyst demokrati</a> af Leif 
+Rasmussen</li>
+
+
+
 <li>
 <a href="http://debianguiden.dk/">Debianguiden</a> er en bog om Debian</li>
 <li>Frit Firewall-kursus <a href="http://www.chbs.dk/kurser/firewall">http://www.chbs.dk/kurser/firewall</a></li>
