--- a/c/palm/home.html
+++ b/c/palm/home.html
@@ -13,7 +13,7 @@
 <h1>Friheden til at programmere i C</h1>
 
     <ul>
-    <li> <a href="file:../bog/index.html" 
+    <li> <a href="file:../c/index.html" 
            MAXDEPTH="2" 
            NOIMAGES>Start her</a></li>
     </ul>
