ændring til ny URL

--- a/c/palm/home.html
+++ b/c/palm/home.html
@@ -19,7 +19,7 @@
     </ul>
 
 <p>
-Bogen kan også læses på adressen <tt>http://www.sslug.dk/linuxbog<tt>
+Bogen kan også læses på adressen <tt>http://www.linuxbog.dk</tt>
 </p>
 <p>
 Fejl og mangler bedes tilsendt til <tt>linuxbog@sslug.dk</tt> eller
