--- a/templatebog/palm/home.html
+++ b/templatebog/palm/home.html
@@ -13,13 +13,13 @@
 <h1>Linux - Friheden til at vælge</h1>
 
     <ul>
-    <li> <a href="file:../bog/index.html" 
+    <li> <a href="file:../XXX/index.html" 
            MAXDEPTH="2" 
            NOIMAGES>Start her</a></li>
     </ul>
 
 <p>
-Bogen kan også læses på adressen <tt>http://www.sslug.dk/linuxbog<tt>
+Bogen kan også læses på adressen <tt>http://www.linuxbog.dk</tt>
 </p>
 <p>
 Fejl og mangler bedes tilsendt til <tt>linuxbog@sslug.dk</tt> eller
