--- a/wm/palm/home.html
+++ b/wm/palm/home.html
@@ -4,22 +4,22 @@
     "DTD/xhtml1-strict.dtd">
 <html lang="en" xml:lang="en" xmlns="http://www.w3.org/1999/xhtml">
   <head>
-    <title>Linux - Friheden til at vælge YYY</title>
+    <title>Linux - Friheden til at vælge Windowmanager</title>
   </head>
 <body>
 
 <!-- ######################################################################### -->
 
-<h1>Linux - Friheden til at vælge</h1>
+<h1>Linux - Friheden til at vælge Windowmanager</h1>
 
     <ul>
-    <li> <a href="file:../bog/index.html" 
+    <li> <a href="file:../wm/index.html" 
            MAXDEPTH="2" 
            NOIMAGES>Start her</a></li>
     </ul>
 
 <p>
-Bogen kan også læses på adressen <tt>http://www.sslug.dk/linuxbog<tt>
+Bogen kan også læses på adressen <tt>http://www.linuxbog.dk</tt>
 </p>
 <p>
 Fejl og mangler bedes tilsendt til <tt>linuxbog@sslug.dk</tt> eller
