--- a/alle/palm/home.html
+++ b/alle/palm/home.html
@@ -13,13 +13,13 @@
 <h1>Linux - Friheden til at skrive bøger</h1>
 
     <ul>
-    <li> <a href="file:../bog/index.html" 
+    <li> <a href="file:../dokumentation/index.html" 
            MAXDEPTH="3" 
            NOIMAGES>Start her</a></li>
     </ul>
 
 <p>
-Bogen kan også læses på adressen <tt>http://www.sslug.dk/linuxbog<tt>
+Bogen kan også læses på adressen <tt>http://www.linuxbog.dk</tt>
 </p>
 
 <p>
