--- a/misc/home.html
+++ b/misc/home.html
@@ -13,26 +13,26 @@
 <h1>Linux - Friheden til skrive bøger</h1>
 
     <ul>
-    <li> <a href="file:../friheden/bog/index.html" MAXDEPTH="2"
+    <li> <a href="file:../friheden/friheden/index.html" MAXDEPTH="2"
     NOIMAGES>Linux - Friheden til at vælge</a> - En bog Linux-begynderbog.</li>
-    <li> <a href="file:../applikationer/bog/index.html" MAXDEPTH="2"
+    <li> <a href="file:../applikationer/applikationer/index.html" MAXDEPTH="2"
     NOIMAGES>Linux - Friheden til at vælge programmer</a> - En bog om Linuxprogrammer.</li>
-    <li> <a href="file:../admin/bog/index.html" MAXDEPTH="2"
+    <li> <a href="file:../admin/admin/index.html" MAXDEPTH="2"
     NOIMAGES>Linux - Friheden til at systemadministration</a> - 
      Administrer din egen Linux-server </li>
-    <li> <a href="file:../program/bog/index.html" MAXDEPTH="2"
+    <li> <a href="file:../program/program/index.html" MAXDEPTH="2"
     NOIMAGES>Linux - Friheden til at programmere</a> - Programmering
     på Linux.</li>
-    <li> <a href="file:../sikkerhed/bog/index.html" MAXDEPTH="2"
+    <li> <a href="file:../sikkerhed/sikkerhed/index.html" MAXDEPTH="2"
     NOIMAGES>Linux - Friheden til at sikkerhed på internettet</a> - 
     introduktion til sikkerhed på netværket.</li>
-    <li> <a href="file:../web/bog/index.html" MAXDEPTH="2"
+    <li> <a href="file:../web/web/index.html" MAXDEPTH="2"
     NOIMAGES>Linux - Friheden til egen webserver</a> - 
     Web og databaser</li>
     </ul>
 
 <p>
-Bøgerne kan også læses på adressen <tt>http://www.sslug.dk/linuxbog<tt>
+Bøgerne kan også læses på adressen <tt>http://www.linuxbog.dk</tt>
 </p>
 <p>
 Fejl og mangler bedes tilsendt til <tt>linuxbog@sslug.dk</tt> eller
