Flere ÅDL-værker

--- a/licens/vaerker.html
+++ b/licens/vaerker.html
@@ -33,10 +33,17 @@ Rasmussen</li>
 
 <li>
 <a href="http://debianguiden.dk/">Debianguiden</a> er en bog om Debian</li>
-<li>Frit Firewall-kursus <a href="http://www.chbs.dk/kurser/firewall">http://www.chbs.dk/kurser/firewall</a></li>
-<li>Frit Samba-kursus <a href="http://www.chbs.dk/kurser/samba">http://www.chbs.dk/kurser/samba</a></li>
 <li>Alle "Linux - Friheden til at vælge" bøger på <a href="http://www.sslug.dk/linuxbog">http://www.sslug.dk/linuxbog</a></li>
+
+<li>Frit Bash-kursus <a href="http://www.chbs.dk/kurser/bash">http://www.chbs.dk/kurser/bash</a></li>
+<li>Frit Firewall-kursus <a href="http://www.chbs.dk/kurser/firewall">http://www.chbs.dk/kurser/firewall</a></li>
+<li>Frit Linuxserver-kursus <a href="http://www.chbs.dk/kurser/linuxserver">http://www.chbs.dk/kurser/linuxserver</a></li>
+<li>Frit OpenOffice.org-kursus <a href="http://www.chbs.dk/kurser/ooo">http://www.chbs.dk/kurser/ooo</a></li>
+<li>Frit PHP-kursus <a href="http://www.chbs.dk/kurser/php">http://www.chbs.dk/kurser/php</a></li>
+<li>Frit Samba-kursus <a href="http://www.chbs.dk/kurser/samba">http://www.chbs.dk/kurser/samba</a></li>
 </ul>
+
+
 
 <!-- Text slut -->
 <!--#include virtual="/includes/bottom.html" -->
