Et par noter fra Dan Jensen

--- a/applikationer/todo.html
+++ b/applikationer/todo.html
@@ -213,6 +213,26 @@ codecs.</li>
 
 </ul></li>
 
+<li>Et par noter fra Dan Jensen<lu>
+<li><pre>
+KOffice applikationerne - Siger sig selv.
+   De nyeste udgaver er meget feature-rige
+   Stavekontrol - Der ligger p.t. et tip i KDE CWS (kde.ground.cz) hvor
+      der beskrives hvorledes man laver et simpelt bash-script som vil
+         spellchecke ting i clipboard
+	 SodiPodi og Karbon14 - Vektorbaserede tegneprogrammer (meget stærke)
+	 GwenView - Billedkigger á la GQView, baseret på KDE bibliotekerne (har
+	   også support for xcf (GIMP))
+	   Muse - Stærkt program til at lave musik med
+	   Gaim - Multi-protokol IM system til GNOME
+	   
+	     Jeg lagde mærke til, i TODO står der nævnt omkring web
+browsere. Jeg tror
+personligt det ville være en god ting at have nævnt, da de fleste nye brugere
+nok vil undre sig over hvor Internet Explorer er blevet af... Dermed, en kort
+introduktion (som de andre) til Konqueror, Mozilla (og Firebird), Epiphany og
+måske andre?
+</pre></li></ul></li>
 
 
 </ul>
