todo.html: Donald går igang med sprog og nyt i kap.2 og 4.

--- a/itplatform/todo.html
+++ b/itplatform/todo.html
@@ -20,6 +20,8 @@
 
     <ul>
     <li>Bare skriv - der mangler meget</li>
+    <li>Donald Axel: Efter forstudium: Går igang med sprog i
+    forord og, i første omgang, et nyt kapitel 2 og 4.</li>
     </ul>
     <!-- Text slut -->
     <!-- Husk din email-adresse: -->
