Tilføjet note om http://ccrma-www.stanford.edu/planetccrma/software/packages.html som regler

--- a/applikationer/todo.html
+++ b/applikationer/todo.html
@@ -143,6 +143,9 @@ kender? Der er en frontend til gocr, gocr-gtk.</li>
 <!-- ---------------------------- -->
 <li>Lyd<ul>
 
+  <li>Der er en masse spændende applikationer på
+http://ccrma-www.stanford.edu/planetccrma/software/packages.html</li>
+
   <li>Lyd og bilede. Vi skal have præsenteret de mest generelle
   afspillere først. Det vil sige sådan noget som xmms og KDE's
   medieafspiller, samt gnomes medieafspiller. Senere kan de mere
