--- a/distro/palm/home.html
+++ b/distro/palm/home.html
@@ -4,13 +4,13 @@
     "DTD/xhtml1-strict.dtd">
 <html lang="en" xml:lang="en" xmlns="http://www.w3.org/1999/xhtml">
   <head>
-    <title>Linux - Friheden til at vælge</title>
+    <title>Linux - Friheden til at vælge open source distribution</title>
   </head>
 <body>
 
 <!-- ######################################################################### -->
 
-<h1>Linux - Friheden til at vælge</h1>
+<h1>Linux - Friheden til at vælge open source distribution</h1>
 
     <ul>
     <li> <a href="file:../bog/index.html" 
@@ -19,7 +19,7 @@
     </ul>
 
 <p>
-Bogen kan også læses på adressen <tt>http://www.sslug.dk/linuxbog<tt>
+Bogen kan også læses på adressen <tt>http://www.linuxbog.dk/<tt>
 </p>
 <p>
 Fejl og mangler bedes tilsendt til <tt>linuxbog@sslug.dk</tt> eller
